# openzign

./: Cargo.toml  Dockerfile  README.md  earcher = reader.searcher();
oz-api/: Cargo.toml  README.md
oz-api/src/: core.rs  main.rs  server.rs
oz-datamodel/: Cargo.toml
oz-datamodel/src/: lib.rs
oz-fila/: .gitignore  Cargo.toml  Dockerfile  README.md  vxug.yar
oz-fila/src/: main.rs
oz-indexer/: Cargo.toml
oz-indexer/src/: index.rs  lib.rs  main.rs  schema.rs  search.rs
