[package]
name = "oz-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oz-indexer = { path = "../oz-indexer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.16.1"
structopt = "0.3"
oz-datamodel = { path = "../oz-datamodel"}
tide = "0.16"
async-std = { version = "1.10", features = ["attributes"] }
once_cell = "1.8.0"