[package]
name = "oz-datamodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
r2pipe = { git = "https://github.com/radareorg/r2pipe.rs" }
hex = "0.4"
tantivy = "0.16.1"