[package]
name = "oz-fila"
version = "0.1.0"
authors = ["Cyrill Leutwiler <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
r2pipe = { git = "https://github.com/radareorg/r2pipe.rs" }
serde_json = "1"
oz-datamodel = { path = "../oz-datamodel"}